--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="container-flex header container">
-      <nav class="container-flex">
+      <nav class="container-flex nav-container">
         <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul class="nav-list container-flex">
           <li class="nav-item">
@@ -32,6 +32,7 @@
           <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
+
       <address class="address-nav">
         <ul class="address-list container-flex">
           <li class="address-item">
