--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container container-flex">
         <nav class="container-flex nav-container">
           <a href="./index.html" class="logo">Web<span>Studio</span></a>
@@ -54,17 +54,19 @@
     <main>
       <!--Hero-->
       <section class="hero-section">
-        <h1 class="hero-title">
-          Effective Solutions<br />
-          for Your Business
-        </h1>
-        <button type="button" class="hero-btn">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">
+            Effective Solutions<br />
+            for Your Business
+          </h1>
+          <button type="button" class="hero-btn">Order Service</button>
+        </div>
       </section>
       <!--Features 2 section-->
 
       <section class="section">
         <div class="container">
-          <h2 class="title-hidden">Features</h2>
+          <h2 class="visually-hidden">Features</h2>
           <ul class="container-flex feature-list">
             <li class="feature-item">
               <h3 class="subtitle">Strategy</h3>
